[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Images/Skins/mask.Robot.png" type="Texture" id=2]
[ext_resource path="res://Images/Skins/Robot.png" type="Texture" id=3]
[ext_resource path="res://GUI/Icons/gameicons/PNG/White/1x/backward.png" type="Texture" id=4]
[ext_resource path="res://GUI/Icons/gameicons/PNG/White/1x/forward.png" type="Texture" id=5]
[ext_resource path="res://Images/Skins/Default.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.588235 )
border_color = Color( 0, 0, 0, 0.780392 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20
expand_margin_left = 12.0
expand_margin_right = 12.0

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="SpriteMask" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="FloorDetector" type="RayCast2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
enabled = true

[node name="Wardrobe" type="Panel" parent="."]
show_behind_parent = true
margin_left = -100.0
margin_top = -150.0
margin_right = 100.0
margin_bottom = -50.0
rect_min_size = Vector2( 200, 100 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Wardrobe"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Wardrobe/CenterContainer"]
margin_left = 6.0
margin_top = 10.0
margin_right = 193.0
margin_bottom = 89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureButton" parent="Wardrobe/CenterContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 79.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skin" type="TextureButton" parent="Wardrobe/CenterContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 133.0
margin_bottom = 79.0
texture_normal = ExtResource( 6 )

[node name="Right" type="TextureButton" parent="Wardrobe/CenterContainer/HBoxContainer"]
margin_left = 137.0
margin_right = 187.0
margin_bottom = 79.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Wardrobe/CenterContainer/HBoxContainer/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Wardrobe/CenterContainer/HBoxContainer/Skin" to="." method="_on_Skin_pressed"]
[connection signal="pressed" from="Wardrobe/CenterContainer/HBoxContainer/Right" to="." method="_on_Right_pressed"]
